@@ -6,6 +6,10 @@
    - stevesk@cvs.openbsd.org 2002/09/12 19:50:36
      [session.c ssh.1]
      add SSH_CONNECTION and deprecate SSH_CLIENT; bug #384.  ok markus@
+   - stevesk@cvs.openbsd.org 2002/09/13 19:23:09
+     [channels.c sshconnect.c sshd.c]
+     remove use of SO_LINGER, it should not be needed. error check
+     SO_REUSEADDR. fixup comments. ok markus@
 
 20020912
  - (djm) Made GNOME askpass programs return non-zero if cancel button is 
